Update to fatter icons.

--- a/src/components/AclEditor/AclEditor.scss
+++ b/src/components/AclEditor/AclEditor.scss
@@ -259,11 +259,11 @@
     color: $zorroa-gray
   }
 
-  .icon-cross2 {
+  .icon-cross {
     font-size: 8px;
   }
 
-  .icon-cross2:hover {
+  .icon-cross:hover {
     color: $zorroa-sickly-green;
   }
 
