--- a/src/components/ProgressCircle/ProgressCircle.scss
+++ b/src/components/ProgressCircle/ProgressCircle.scss
@@ -1,6 +1,6 @@
 @import '../../styles/core-mixins.scss';
 
-.Progress {
+.ProgressCircle {
   .background {
     fill: none;
     stroke: $zorroa-gray;
