--- a/src/components/Collapsible/CollapsibleHeader.scss
+++ b/src/components/Collapsible/CollapsibleHeader.scss
@@ -71,7 +71,7 @@
   min-width: 16px;
   max-width: 16px;
 
-  // icon-chevron-down doesn't line up exactly when rotated, so adjust
+  // icon-arrow-down doesn't line up exactly when rotated, so adjust
   &.isOpen {
     transform: rotate(180deg);
     transform-origin: 44% 50%;
