--- a/src/components/Folders/Folders.scss
+++ b/src/components/Folders/Folders.scss
@@ -86,8 +86,9 @@
   background-color: $zorroa-water-blue;
   border: none;
   border-radius: 3px;
-  padding: 4px 8px;
+  padding: 7.5px 8px;
   cursor: pointer;
+  margin-right: 4px;
 
   &.disabled {
     cursor: not-allowed;
@@ -105,6 +106,11 @@
       background-color: darken($zorroa-water-blue, 15%);
     }
   }
+}
+
+.Folders-controls-add-label {
+  margin-left: 4px;
+  font-size: 12px;
 }
 
 .Folders-sort {
