Update importer to thick icons.

--- a/src/components/Jobs/Jobs.scss
+++ b/src/components/Jobs/Jobs.scss
@@ -72,14 +72,13 @@
 .Jobs-controls-add {
   @include flexRowCenter;
   color: white;
-  background-color: $zorroa-sickly-green;
+  background-color: $zorroa-water-blue;
   border: none;
-  border-radius: 15px;
-  width: 30px;
-  height: 30px;
-  font-size: 14px;
-  margin: 4px;
+  border-radius: 3px;
+  padding: 7.5px 8px;
   cursor: pointer;
+
+  .icon-import2 { margin-top: -4px; }   // Felt too low otherwise
 
   &.disabled {
     cursor: not-allowed;
@@ -90,13 +89,18 @@
   &:not(.disabled) {
     &:hover {
       border: 1px solid $zorroa-gray;
-      background-color: darken($zorroa-sickly-green, 15%);
+      background-color: darken($zorroa-water-blue, 15%);
     }
     &:active {
       color: $zorroa-nearwhite;
-      background-color: darken($zorroa-sickly-green, 15%);
+      background-color: darken($zorroa-water-blue, 15%);
     }
   }
+}
+
+.Jobs-controls-add-label {
+  margin-left: 4px;
+  font-size: 12px;
 }
 
 .Jobs-sort {
