--- a/src/components/PieChart/PieChart.scss
+++ b/src/components/PieChart/PieChart.scss
@@ -24,7 +24,7 @@
   .dark & { color: $zorroa-whitegray; }
 
   &.active {
-    fill: $zorroa-water-blue;
+    fill: $zorroa-navy-blue;
     font-weight: 900;
     font-size: 11px;
   }
