--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -150,8 +150,8 @@
 
   &.selected {
     color: white;
-    background-color: $zorroa-water-blue;
-    &:hover { background-color: darken($zorroa-water-blue, 15%); }
+    background-color: $zorroa-navy-blue;
+    &:hover { background-color: darken($zorroa-navy-blue, 15%); }
   }
 }
 
