--- a/src/components/Racetrack/DateRange.scss
+++ b/src/components/Racetrack/DateRange.scss
@@ -76,7 +76,7 @@
 }
 
 .DateRange-go {
-  @include zorroa-btn(34px, 34px, $zorroa-water-blue, darken($zorroa-water-blue, 15%));
+  @include zorroa-btn(34px, 34px, $zorroa-navy-blue, darken($zorroa-navy-blue, 15%));
 
   color: white;
   margin-left: 6px;
