--- a/src/styles/core-mixins.scss
+++ b/src/styles/core-mixins.scss
@@ -26,6 +26,7 @@ $zorroa-sickly-green   : #73b61c;
 $zorroa-faded-red      : #ce2d3f;
 $zorroa-orangish       : #fc6c2c;
 $zorroa-water-blue     : #1875d1;
+$zorroa-navy-blue      : #445faa;
 $zorroa-darkish-purple : #a11e77;
 $zorroa-medium-pink    : #ee4688;
 $zorroa-warm-grey-60   : rgba(128, 128, 128, 0.6);
