--- a/src/components/AssetPermissions/AssetPermissions.scss
+++ b/src/components/AssetPermissions/AssetPermissions.scss
@@ -42,7 +42,7 @@
   @include nowrap;
   &.disabled { background-color: $zorroa-lightgray; }
   &:hover:not(.disabled) { background-color: $zorroa-hover-green; }
-  &:active:not(.disabled) { background-color: $zorroa-water-blue; }
+  &:active:not(.disabled) { background-color: $zorroa-navy-blue; }
 }
 
 .AssetPermissions-cancel {
