--- a/src/components/Import/CloudproxyInstructions.scss
+++ b/src/components/Import/CloudproxyInstructions.scss
@@ -21,7 +21,7 @@
   margin-top: 5px;
   margin-bottom: 5px;
   a {
-    color: $zorroa-water-blue;
+    color: $zorroa-navy-blue;
     text-decoration: none;
     font-weight: 500;
     cursor: pointer;
