--- a/src/assets/fonts/zorroa-icons/style.css
+++ b/src/assets/fonts/zorroa-icons/style.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'zorroa-icons';
-  src:  url('fonts/zorroa-icons.eot?wd33ce');
-  src:  url('fonts/zorroa-icons.eot?wd33ce#iefix') format('embedded-opentype'),
-    url('fonts/zorroa-icons.woff2?wd33ce') format('woff2'),
-    url('fonts/zorroa-icons.ttf?wd33ce') format('truetype'),
-    url('fonts/zorroa-icons.woff?wd33ce') format('woff'),
-    url('fonts/zorroa-icons.svg?wd33ce#zorroa-icons') format('svg');
+  src:  url('fonts/zorroa-icons.eot?6xlg0r');
+  src:  url('fonts/zorroa-icons.eot?6xlg0r#iefix') format('embedded-opentype'),
+    url('fonts/zorroa-icons.woff2?6xlg0r') format('woff2'),
+    url('fonts/zorroa-icons.ttf?6xlg0r') format('truetype'),
+    url('fonts/zorroa-icons.woff?6xlg0r') format('woff'),
+    url('fonts/zorroa-icons.svg?6xlg0r#zorroa-icons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -25,6 +25,27 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-external:before {
+  content: "\e97f";
+}
+.icon-location_searching:before {
+  content: "\e976";
+}
+.icon-settings_backup_restore:before {
+  content: "\e92f";
+}
+.icon-square-minus:before {
+  content: "\e969";
+}
+.icon-square-plus:before {
+  content: "\e968";
+}
+.icon-search2:before {
+  content: "\e962";
+}
+.icon-plus2:before {
+  content: "\e928";
+}
 .icon-eye2:before {
   content: "\e92c";
 }
@@ -196,11 +217,8 @@
 .icon-search:before {
   content: "\e904";
 }
-.icon-server:before {
-  content: "\e96b";
-}
-.icon-database:before {
-  content: "\e96b";
+.icon-document-download:before {
+  content: "\e97c";
 }
 .icon-search3:before {
   content: "\e965";
@@ -217,23 +235,14 @@
 .icon-layout4:before {
   content: "\e903";
 }
-.icon-location_searching:before {
-  content: "\e976";
+.icon-server:before {
+  content: "\e96b";
 }
-.icon-settings_backup_restore:before {
-  content: "\e92f";
+.icon-database:before {
+  content: "\e96b";
 }
-.icon-square-minus:before {
-  content: "\e969";
-}
-.icon-square-plus:before {
-  content: "\e968";
-}
-.icon-search2:before {
-  content: "\e962";
-}
-.icon-plus2:before {
-  content: "\e928";
+.icon-eye-crossed2:before {
+  content: "\e97d";
 }
 .icon-exists:before {
   content: "\e97b";
