Fix map, pie and facet layouts.

--- a/src/components/PieChart/PieChart.scss
+++ b/src/components/PieChart/PieChart.scss
@@ -25,6 +25,7 @@
 
   &.active {
     fill: $zorroa-navy-blue;
+    .dark & { fill: $zorroa-sickly-green; }
     font-weight: 900;
     font-size: 11px;
   }
