Initial Taxonomy menu item working.

--- a/src/components/Folders/FolderItem.scss
+++ b/src/components/Folders/FolderItem.scss
@@ -200,3 +200,7 @@ $FolderItemHeight : 25px;
   background-color: transparent;
   box-sizing: border-box;
 }
+
+.FolderItem-taxonomy {
+  margin-right: 8px;
+}
