Check hash field types for similarity. Clear hash values on field change.

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -219,7 +219,7 @@
   text-transform: uppercase;
   border-radius: 3px;
   padding: 5px;
-  color: $zorroa-gray;
+  color: $zorroa-darkgray;
   @include flexRow;
   @include flexAlignItemsCenter;
   @include clampText;
