Fix lightbox's toolbar layout
Remove right side separator
Center the controls

--- a/src/components/Inspector/Controlbar.scss
+++ b/src/components/Inspector/Controlbar.scss
@@ -15,8 +15,7 @@
 
   width: auto;
 
-  @include flexRow;
-  @include flexAlignItemsCenter;
+  @include flexRowCenter;
   @include flexJustifySpaceBetween;
 
   button:disabled {
@@ -50,4 +49,5 @@
 
 .Controlbar-section {
   @include flexRowCenter;
+  padding: 0 10px;
 }
