--- a/src/components/Lightbox/Lightbar.scss
+++ b/src/components/Lightbox/Lightbar.scss
@@ -88,6 +88,7 @@
   z-index: 1000;
   background-color: $zorroa-nearwhite;
 
+  .dark & { background-color: $zorroa-nearblack }
   &:hover { color: $zorroa-darkgray; }
   &:active { color: $zorroa-darkgray; }
 }
