Fix for Sidebar resizer preventing interaction in Widgets
Make sure the stacking order of Racebar is after Workspace,
so that children of Racebar stack on top of the Workspace.

This may generally help other z-index issues, since z-index
is being used for drop-downs. Stacking bottom to top allows
dropdowns to automatically stack on top of elements that are
vertically lower than the dropdown parent.

--- a/src/components/Workspace/Workspace.scss
+++ b/src/components/Workspace/Workspace.scss
@@ -2,7 +2,7 @@
 
 // App class, containing header and workspace in columns
 .App {
-  @include flexCol;
+  @include flexColRev; // Assets are declared upside-down, so that stacking order is bottom-to-top. See comments in Workspace.render()
   overflow: hidden;
   flex: 1;
 
@@ -24,6 +24,7 @@
   right: 0;
   bottom: 0;
   display: none;
+  z-index: 1; // Make sure dropzone stacks on top of Racebar
 
   font-size: 28px;
   color: white;
