--- a/src/components/Preferences/Preferences.scss
+++ b/src/components/Preferences/Preferences.scss
@@ -99,10 +99,8 @@
   padding: 6px 12px;
   align-self: center;
   cursor: pointer;
-
-  &:hover {
-    background-color: $zorroa-darkgray;
-  }
+  background-color: $zorroa-water-blue;
+  &:hover { background-color: darken($zorroa-water-blue, 15%); }
 }
 
 .Preferences-build {
@@ -140,7 +138,8 @@
 }
 
 .Preferences-field-template {
-  @include flexRowCenter;
+  @include flexRow;
+  @include flexAlignItemsCenter;
   margin-top: 10px;
 }
 
@@ -158,11 +157,15 @@
 }
 
 .Preferences-field-template-reset {
-  padding: 4px 12px;
+  padding: 5px 8px;
   background-color: $zorroa-water-blue;
   color: white;
   border-radius: 3px;
-  margin-left: 8px;
+  margin-left: 9px;
+  cursor: pointer;
+  text-transform: uppercase;
+  font-size: 12px;
+  &:hover { background-color: darken($zorroa-water-blue, 15%) }
 }
 
 .Preferences-uxlevel {
