--- a/src/components/Preferences/Preferences.scss
+++ b/src/components/Preferences/Preferences.scss
@@ -165,7 +165,8 @@
   cursor: pointer;
   text-transform: uppercase;
   font-size: 12px;
-  &:hover { background-color: darken($zorroa-water-blue, 15%) }
+  &:hover:not(.disabled) { background-color: darken($zorroa-water-blue, 15%) }
+  &.disabled { background-color: $zorroa-lightgray; }
 }
 
 .Preferences-uxlevel {
