--- a/src/components/Racetrack/SimilarHash.scss
+++ b/src/components/Racetrack/SimilarHash.scss
@@ -159,3 +159,9 @@
   margin-bottom: 20px;
   @include zorroa-ok-btn;
 }
+
+.SimilarHash-minscore-input {
+  width: 50px;
+  text-align: center;
+  border: none;
+}
