Handle dark mode for similar min score input.

--- a/src/components/Racetrack/SimilarHash.scss
+++ b/src/components/Racetrack/SimilarHash.scss
@@ -164,4 +164,6 @@
   width: 50px;
   text-align: center;
   border: none;
+
+  .dark & { color: $zorroa-whitegray; background-color: transparent; }
 }
