--- a/src/components/Racetrack/Collections.scss
+++ b/src/components/Racetrack/Collections.scss
@@ -77,3 +77,14 @@
     color: $zorroa-lightgray;
   }
 }
+
+.Collections-restore {
+  background-color: $zorroa-navy-blue;
+  border-radius: 3px;
+  color: $zorroa-nearwhite;
+  padding: 4px 8px;
+  margin-bottom: 10px;
+  cursor: pointer;
+  &.disabled { background-color: $zorroa-gray; }
+  &:not(.disabled):hover { background-color: darken($zorroa-navy-blue, 15%); }
+}
