--- a/src/components/Inspector/Inspector.scss
+++ b/src/components/Inspector/Inspector.scss
@@ -33,3 +33,7 @@
   color: rgba(128, 128, 128, 1);
   text-shadow: 0 0 2px 2px rgba(0,0,0, 0.5);
 }
+
+.Inspector-error {
+  color: $zorroa-faded-red;
+}
